--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
             <img src="game1.png" alt="Game 1">
 			<br>
 			<a href="https://games.gdevelop-app.com/game-b66eaed6-526e-4ceb-a7e2-2ed0d1fe40aa/index.html" class="button">Play Now</a>
+					<h4>Last updated xx.02.2023</h4>
         </div>
 					        <div class="game">
 					<h1>Dont touch the Creeper</h1>
