--- a/index.html
+++ b/index.html
@@ -201,12 +201,14 @@
             <img src="game2.png" alt="Game 2">
 			<br>
 			<a href="https://games.gdevelop-app.com/game-0da94a81-243d-439d-aa84-ec8c8cbe1ec2/index.html" class="button">Play Now</a>
+							<h4>Last updated xx.xx.2022</h4>
         </div>
 							        <div class="game">
 					<h1>UNTITLED_PROJECT</h1>
             <img src="error.png" alt="Error loading IMAGE">
 			<br>
 			<a href="https://games.gdevelop-app.com/game-81c1072c-8664-48fb-97c3-7d663f935e7f/index.html" class="button">Play Now</a>
+									<h4>Last updated xx.07.2022</h4>
         </div>
                 <li>Game 3</li>
                 <li>Game 4</li>
