--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kasai Interactive</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cutive&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Special+Elite&display=swap');
 
         body {
             font-family: 'VT323', monospace;
